# Final_year_project

./: README.md  slip.ko
AWS Write/: Broker.py  aaec224321f9ead8b32b85efab57780338f9a33e0aec1b2a83001f5ad3b9b10c-certificate.pem.crt
AWS script/: Broker.py
AWS script/old/: New Text Document.txt
AWS_READ/: aws.py  data_process.py  my_data.csv
Backup files/OLD/: Untitled-1.c
Backup files/OLD/mqtt/: CMakeLists.txt  mqtt.c  pcb.tiff
Backup files/OLD/mqtt/include/: mqtt.h
Backup files/OLD/node_firmware/: CMakeLists.txt  sdkconfig
Backup files/node_firmware/: sdkconfig
Backup files/node_firmware/components/wifi_station/: CMakeLists.txt  wifi_station.c
Circuits/final/: final.kicad_pro  final.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Circuits/test/Battery_voltage_level/: Battery Voltage level.asc
Circuits/test/PT1000/: PT1000.asc  Photos.md
Code/ADC_test/: ADC_test.ino  read.txt
Code/arduino codes/mq2/: mq2.ino
ML model/: model.py  new-data.csv
Manuel switching/: client.py  server.py
Manuel switching/success/: client.py
PCB/: final_year v1.0.kicad_sch  fp-lib-table
PCB/Final-Year_v1.0/: final_year v1.0.kicad_pcb  final_year v1.0.kicad_prl  final_year v1.0.kicad_pro  final_year v1.0.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Final-Year_v1.0/Gerber/: final_year v1.0-B_Cu.gbl  final_year v1.0-B_Mask.gbs  final_year v1.0-B_Paste.gbp  final_year v1.0-B_Silkscreen.gbo  final_year v1.0-Edge_Cuts.gm1  final_year v1.0-F_Cu.gtl  final_year v1.0-F_Mask.gts  final_year v1.0-F_Paste.gtp  final_year v1.0-F_Silkscreen.gto  final_year v1.0-NPTH-drl_map.gbr  final_year v1.0-NPTH.drl  final_year v1.0-PTH-drl_map.gbr  final_year v1.0-PTH.drl
PCB/PCB files/: final.kicad_prl  final.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
RPI/: Broker.py  aaec224321f9ead8b32b85efab57780338f9a33e0aec1b2a83001f5ad3b9b10c-private.pem.key
RPI/old/: Device.pem.crt  dsm501.py  private.pem.key
ads_read/components/actuator/: CMakeLists.txt  actuator.c
ads_read/components/ads1115/: ads1115.c
ads_read/main/: main.c
automated switching/: client-auto.py  server-auto.py
automated switching/success/: client-auto.py  server-auto.py
dashboard/server/: index.js  package-lock.json  package.json
i2c_simple/: sdkconfig.old
i2c_simple/main/: i2c_simple_main.c
mqtt/: CMakeLists.txt
mqtt/main/: main.c
node_firmware/components/mq2/: CMakeLists.txt  mq2.c
node_firmware/components/mqtt/: CMakeLists.txt  mqtt.c  mqtt_c.c
node_firmware/components/mqtt/include/: mqtt_c.h
node_firmware/main/: main.c
simulataneous cam switching manual/: client.py  server.py
simulataneous cam switching manual/success/: client.py  server.py
simultaneous cam switching auto/: client-auto-simul.py  server-auto_simul.py
simultaneous cam switching auto/success/: client-auto-simul.py  server-auto_simul.py
test files/: nrf240.py
test files/DUST/: CMakeLists.txt
test files/dsm/: CMakeLists.txt
test files/i2c_simple/: sdkconfig.old
test files/mq2/: sketch_apr28a.ino
test files/mqtt/: sdkconfig
test files/wifi_station/: sdkconfig
test_idf/: CMakeLists.txt
test_idf/main/: main.c
wifi_station/main/: station_example_main.c
(+53 files in other folders)
